[tool.poetry]
name = "books-backend-test"
version = "0.1.0"
description = ""
authors = ["MykolaMS9 <mykolanikonov99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.11"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
